--- a/app/views/applicants/show.html.erb
+++ b/app/views/applicants/show.html.erb
@@ -8,4 +8,4 @@
 <p>Dirección: <%= "#{@applicant.address}, #{@applicant.country}"%> </p>
 <p>Salario Esperado: <%= "#{@applicant.expected_salary} #{@applicant.currency}" %> </p>
 
-
+<%= link_to "Edit", edit_applicant_path %>
