--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Companies#show</h1>
-<p>Find me in app/views/companies/show.html.erb</p>
+<h1>My Company</h1>
+<img src="<%= @company.logo %>" alt="">
+<p><%= @company.name %></p>
+<%= link_to "Edit", edit_company_path %>
