--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,39 +1,77 @@
-<p>
-  Quedan <%= (@job.expiration_date.to_date - DateTime.now.to_date).to_i %> días para postular!
-</p>
-<p>
-  Nro de Vacantes: <%= @job.vacant_number %>
-</p>
-<h1>
-  <%= @job.title %>
-</h1>
-<h4>
-  Empresa: <%= @job.company.name %>
-</h4>
-<p>
-  Ubicación: <%= @job.location %>
-</p>
-<p>
-  <%= @job.description %>
-</p>
-<h4>
-  Salario: <%= @job.salary %> <%= @job.currency %>
-</h4>
-
-<% if current_user.applicant? %>
-  <% if (application = JobApplication.where(job: @job, applicant: current_user.applicant).first) %>
-    <%= button_to "Remove Application", job_job_application_path(@job), method: "delete" %></td>
-  <% else %>
-    <%= link_to "Apply", new_job_job_application_path(@job) %></td>
-  <% end %>
-<% elsif current_user.company? %>
-  <table>
-    <tr> <th> Applicants </th> </tr>
-    <% @job.job_applications.each do |application| %>
-      <tr> <td> <%= link_to "#{application.applicant.fullname} application.", job_job_application_path(@job,application) %> </td> </tr>
+<section class="flex flex-col m-auto w-3/6 space-y-4 mt-5">
+  <div class="flex items-center space-x-4">
+      <img class="w-10 h-10 rounded-full" src="<%= @job.company.logo %>" alt="">
+      <div class="font-medium text-white">
+          <div><%= @job.company.name %></div>
+          <div class="text-sm text-gray-400"><%= @job.location %></div>
+      </div>
+  </div>
+  <h1 class="text-5xl font-extrabold text-white break-words">
+    <%= @job.title %>
+  </h1>
+  <div class="flex items-center">
+    <span class="text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded mr-2 bg-gray-700 text-gray-400 border border-gray-500">
+      <svg aria-hidden="true" class="w-3 h-3 mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd"></path></svg>
+      Expires in <%= pluralize((@job.expiration_date.to_date - DateTime.now.to_date).to_i,"days") %> 
+    </span>
+    <span class="bg-green-900 text-green-300 text-xs font-medium mr-2 px-2.5 py-0.5 rounded-full ">
+      <%= @job.salary %> <%= @job.currency %>    
+    </span>
+    <span class="bg-green-900 text-green-300 text-xs font-medium mr-2 px-2.5 py-0.5 rounded-full text-center">
+      <%= pluralize(@job.vacant_number,"vacant") %>   
+    </span>
+  </div>
+  <p class="mb-3 font-light text-gray-400 break-words whitespace-pre-line">
+    <%= @job.description %>
+  </p>
+  <% if current_user.applicant? %>
+    <% if (application = JobApplication.where(job: @job, applicant: current_user.applicant).first) %>
+      <%= button_to job_job_application_path(@job), method: "delete", class:"text-white focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center mr-2 bg-red-600 hover:bg-red-700 focus:ring-red-800" do %>
+          <svg aria-hidden="true" class="w-5 h-5 mr-2 -ml-1" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" stroke-linecap="round" stroke-linejoin="round"></path>
+          </svg>
+          Remove Application
+      <% end %>
+    <% else %>
+      <%= button_to new_job_job_application_path(@job), method: "get", class:"text-white focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center mr-2 bg-green-600 hover:bg-green-700 focus:ring-green-800" do %>
+        <svg aria-hidden="true" class="w-5 h-5 mr-2 -ml-1"  fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" stroke-linecap="round" stroke-linejoin="round"></path>
+        </svg>
+        Apply
+      <% end %>
     <% end %>
-  </table>
-<% end %>
+  <% elsif current_user.company? %>
+    <h3 class="text-3xl font-bold text-white">Applicants</h3>
+    <ul class="max-w-md divide-y divide-gray-700">
+
+    <% @job.job_applications.each do |application| %>
+      <li class="pb-3 sm:pb-4">
+          <div class="flex items-center space-x-4">
+            <div class="flex-shrink-0">
+                <img class="w-8 h-8 rounded-full" src="<%= application.applicant.logo %>" alt="No Image">
+            </div>
+            <div class="flex-1 min-w-0">
+                <p class="text-sm font-medium truncate text-white">
+                  <%= "#{application.applicant.fullname} application." %>
+                </p>
+                <p class="text-sm truncate text-gray-400">
+                  <%= application.applicant.user.email %>
+                </p>
+            </div>
+            <div class="inline-flex items-center text-base font-semibold text-white">
+                <%= button_to job_job_application_path(@job,application), method: "get", class:"border border-green-700 focus:ring-4 focus:outline-none font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center border-green-500 text-green-500 hover:text-white hover:bg-green-900 focus:ring-green-800" do %>
+                  <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                  <span class="sr-only">Icon description</span>
+                <% end %>
+            </div>
+          </div>
+      </li>
+    <% end %>
+    </ul> 
+  <% end %>
+</section>
+
+
 
 
 
